{
    "name": "Controls",
    "maps": [
        {
            "name": "Default",
            "id": "b65e8765-4d44-40e1-a5d8-2e91ba016ae6",
            "actions": [
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "de91c816-ef9b-432e-872d-ba966a21feb1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "2b1bab73-ec5f-42b0-bfd7-0729c2bc3ea8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SideMovement",
                    "type": "Button",
                    "id": "562574f3-c452-4792-882a-63b2610d1738",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fbfda28c-b605-4ecb-87c3-79bd622b5b27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "072b3135-572b-4679-82a6-80180bc5d201",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96816ba1-4777-4d49-a535-b262ec42c622",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "82c111ec-ca18-4d06-b1f6-b4dab884db13",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SideMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b4e535d4-d2ab-4dc8-bf44-d1110931bd87",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SideMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "5b2af2c1-4802-4f23-9ed6-ac5883d05f21",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SideMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "da2a184f-9442-4f8f-af9d-e5bb46bb899b",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}